--- a/eleme/src/common/stylus/mixin.styl
+++ b/eleme/src/common/stylus/mixin.styl
@@ -1,4 +1,20 @@
+border-1px($color)
+    position relative
+    &:after
+        position absolute
+        left 0
+        bottom 0
+        width 100%
+        border-top 1px solid $color
+        content ''
+        transform-origin bottom left 
+        transform scaleY(0.5)
+
 bg-image($url)
     background-image: url($url + "@2x.png")
     @media (-webkit-min-device-pixel-ratio:3),(min-device-pixel-ratio:3) 
         background-image: url($url + "@3x.png")
+
+border-none()
+    &:after
+        display none
